@@ -1,0 +1,12 @@
+.d-flex.justify-content-center.mb-3
+  %nav.text-center{"aria-label" => "Audit logs pagination"}
+    %ul.pagination
+      %li.page-item{class: @security_logs.first_page? ? "disabled" : ""}
+        %a.page-link{href: "/security-log?page=#{@security_logs.prev_page}"}
+          %span{"aria-hidden" => true} &laquo;
+      - @security_logs.page_range.each do |page_number|
+        %li.page-item{class: page_number == @security_logs.current_page ? "active" : ""}
+          %a.page-link{href: "/security-log?page=#{page_number}"}= page_number
+      %li.page-item{class: @security_logs.last_page? ? "disabled" : ""}
+        %a.page-link{href: "/security-log?page=#{@security_logs.next_page}"}
+          %span{"aria-hidden" => true} &raquo;
